Bug 1250805 - Respect type-in state when caching inline styles; r=masayuki

MozReview-Commit-ID: OZCUbNUvmz